--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:200,800" rel="stylesheet">
 
     <title>Solitaire</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
 </body>
-<script type="text/javascript" src="/script.js"></script>
+<script type="text/javascript" src="/js/script.js"></script>
 </html>
